--- a/src/components/HomeHighlights.css
+++ b/src/components/HomeHighlights.css
@@ -15,6 +15,12 @@
 
     .home-highlights-special-card > p {
         flex-basis: 30%;
+        line-height: 2.5vw;
+        font-size: 1.6vw;
+    }
+
+    .home-highlights > h3 {
+        font-size: 2.5vw;
     }
 }
 
